--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h1>Projelerim</h1>
       <div class="grid">
         <div class="card">
-          <img src="https://via.placeholder.com/400x220/00ffc8/0a0a0a?text=Karanlık+Orman" alt="Karanlık Orman">
+          <img src="https://cdn.prod.website-files.com/5b651f8b5fc94c4e27470a81/622227fd2ce3cc0455a88166_blog-gamedev-fullsize.png" alt="Karanlık Orman">
           <h3>Karanlık Orman – Mobil Oyun</h3>
           <p>Unity & Blender ile geliştirdiğim sonsuz-roguelike mobil oyun. Odak: “karanlık” mekânda ışık yönetimi ve stres yaratımı.</p>
         </div>
